# agno-rust

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
cookbook/echo-agent/: Cargo.toml
cookbook/echo-agent/src/: main.rs
libs/agno-core/: Cargo.toml
libs/agno-core/src/: agent.rs  lib.rs  llm.rs  message.rs  tool.rs
libs/agno-py/: Cargo.toml  pyproject.toml
libs/agno-py/src/: lib.rs
libs/sayr-py/: pyproject.toml
scripts/: check.sh
src/: agent.rs  config.rs  lib.rs  llm.rs  metrics.rs  runtime.rs  telemetry.rs  workflow.rs
src/tools/: mod.rs
target_bench/: .future-incompat-report.json
target_bench/release/: benchmark_cohere.d  benchmark_cpu.d
target_bench/release/.fingerprint/adler2-dc6a1dca74064903/: lib-adler2  lib-adler2.json
target_bench/release/.fingerprint/agno-rust-0a740eb03fffd5e2/: bin-benchmark_cohere  bin-benchmark_cohere.json  dep-bin-benchmark_cohere
target_bench/release/.fingerprint/agno-rust-986f1d1097dedbf2/: dep-lib-agno_rust  lib-agno_rust  lib-agno_rust.json
target_bench/release/.fingerprint/agno-rust-fb7830f31783a26f/: bin-benchmark_cpu  bin-benchmark_cpu.json  dep-bin-benchmark_cpu
target_bench/release/.fingerprint/ahash-2ce08f57957196a3/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_bench/release/.fingerprint/ahash-376fef6972592e93/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_bench/release/.fingerprint/ahash-4de37f2c8247f336/: lib-ahash  lib-ahash.json
target_bench/release/.fingerprint/ahash-87ec6c5bd31c0291/: lib-ahash  lib-ahash.json
target_bench/release/.fingerprint/ahash-b6dc7596c6a8fbcc/: build-script-build-script-build  build-script-build-script-build.json
target_bench/release/.fingerprint/aho-corasick-67235891171e1c2d/: lib-aho_corasick  lib-aho_corasick.json
target_bench/release/.fingerprint/allocator-api2-38048eff223e6769/: lib-allocator_api2  lib-allocator_api2.json
target_bench/release/.fingerprint/allocator-api2-b60d2e363df3c29c/: lib-allocator_api2  lib-allocator_api2.json
target_bench/release/.fingerprint/anyhow-07aad3898f3e654c/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_bench/release/.fingerprint/anyhow-3e20176ad73b5170/: lib-anyhow  lib-anyhow.json
target_bench/release/.fingerprint/anyhow-41306d98726a9ae7/: build-script-build-script-build  build-script-build-script-build.json
target_bench/release/.fingerprint/arrayvec-4ce08d4916ce2e96/: lib-arrayvec  lib-arrayvec.json
target_bench/release/.fingerprint/arrow-arith-228726f8293a4c5d/: lib-arrow_arith  lib-arrow_arith.json
target_bench/release/.fingerprint/arrow-array-5c5d5d50d7e359a8/: lib-arrow_array  lib-arrow_array.json
target_bench/release/.fingerprint/arrow-buffer-ea522d3046655d3e/: lib-arrow_buffer  lib-arrow_buffer.json
tests/: benchmark_cohere.rs  llm_providers.rs
(+1206 files in other folders)
