[workspace]
members = [
    "libs/agno-core",
    "cookbook/echo-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["AGNO Rust Contributors"]
license = "MIT"
repository = "https://github.com/agno-agi/agno-rust"

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
