[package]
name = "echo-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
agno-core = { path = "../../libs/agno-core" }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
