[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "sayr"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
# Build with minimal features for fast pip install (especially in Colab)
# To enable AWS or telemetry, install with: pip install sayr[aws] or sayr[telemetry]
cargo-extra-args = "--no-default-features"
